css/templatestyles.css
/* ... */
.contact-form{width:300px;padding:20px;border:1px solid #ccc;border-radius:5px;background-color:#f9f9f9;width:100%;max-width:33.33%;}address{font-style:normal}.form-label{margin-bottom:.5rem;}.form-control{display:block;width:100%;padding:.375rem .75rem;font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;background-clip:padding-box;border:1px solid #ced4da;-webkit-appearance:none;-moz-appearance:none;appearance:none;}.form-text{margin-top:.25rem;font-size:.875em;color:#6c757d;}textarea{resize:vertical;}textarea.form-control{min-height:calc(1.5em + .75rem + 2px);}figure{border:1px solid #cdcdcd;}figcaption{padding:10px;}
#sidebar-images > li {margin-bottom: 44px;list-style-type: none;background: white; }


@media (max-width:768px){
    .container{width:100%;flex-direction:column;align-items:center;padding:15px; /* border: 1px solid rgb(238, 255, 0);background: yellow;*/ }
    .content{margin-left:auto;}.contact-form{max-width:max-content;}}

@media (min-width:576px){#nav-brand{width:529px;}.navbar-toggler{display:none;}.nav{height:auto;}.nav a{display:inline-block;}.big-image{margin-top:157px;}.dropdown-content{position:fixed;top:182px;width:260px;left:280px;}.dropdown-content.show{display:inline;}.overlay{padding:25px;}}
@media (min-width:768px){.nav{max-height:175px;}#logo{width:368.55px;}.dropdown-content{top:157px;}}


@media (min-width:768px) and (max-height:600px) and (orientation:landscape){#fixedbar{position:relative;}#navbar{position:relative;top:0;}#hero{margin-top:0;height:125vh;background-position:bottom;}}


@media (min-width:1024px){.p-1{padding:40px 10px!important}p{line-height:30px;}#nav-brand{width:420px;}#nav-wrap{float:right;margin-top:25px}.big-image{margin-top:113px}.overlay{transform:translate(-50%,calc(-50% - 0px));width:50%;}.big-image.home{background-image:url(../images/large/asphalt-and-masonry.webp);}.big-image.services{background-image:url(../images/large/stone-wall.webp);}.big-image.site-work{background-image:url(../images/large/site-work.webp);}.big-image.asphalt-paving{background-image:url(../images/large/asphalt-paving.webp);}.big-image.foundation{background-image:url(../images/large/foundation.webp);}.big-image.back-porch{background-image:url(../images/large/back-porch.webp);}#hero-h1{letter-spacing:1.2px;font-size:40px;}#hero-p{letter-spacing:.7px}.dropdown-content{width:250px;top:113px;left:calc(100vw - 260px)}}
@media (min-width:1200px){.nav{max-height:134px;}#nav-wrap{float:right;margin:25px 20px 0;}#logo{width:100%;}}

.row{display:flex;flex-wrap:wrap}
.column{flex:25%;padding:20px}    
.column>*{display:block;text-align:center;margin:auto}


    
    
footer{background-color:#303f5e;color:white}footer ul{list-style-type:none;padding:0}
#f1{max-width:1320px;margin:auto;color:#ccc!important;font-size:15px;font-weight:300;}
#fname{font-size:19px;font-weight:600;}
#fhr{margin-top:10px;margin-bottom:5px;margin:4px 0 6px 0;width:82px;border-color:#303f5e;}
#fhr2{margin-top:10px;margin-bottom:5px;margin:4px 0 6px 0;width:82px;}
#fhr3{margin-top:10px;margin-bottom:5px;margin:4px 0 6px 0;width:64px;}
#fhr4{margin-top:10px;margin-bottom:5px;margin:4px 0 6px 0;width:90px;}
.fhead{font-size:16px;font-weight:600;}
.footer-links a{color:#fff;text-decoration:none}
.footer-links a{color:rgb(204,204,204);text-decoration:none;display:inline-block;padding:5px 0}
.fsociallink{margin-right:10px}
.fsociallink>img{width:inherit;display:inline-block;}.link{color:#1e396c;font-weight:500;}





.rowf{display:flex;flex-wrap:wrap}
.columnf{flex:25%;padding:20px}
.arrowf{border:solid #fff;border-width:0 1px 1px 0;display:inline-block;padding:3px;margin-right:9px;margin-bottom:1px}
.rightf{transform:rotate(-45deg);-webkit-transform:rotate(-45deg)}
.columnf:nth-child(2) {    padding-left: 5%;}



.copyright{clear:both;padding:5px;text-align:center;color:#ccc;background-color:#25304b;font-size:16px;font-weight:300}


    /*
    home page Learn More -->
.icon{display:inline-block;width:20px;line-height:0}
.arrow{background-color:#e8e8e8;display:inline-block;position:relative;width:100%;height:1.5px;top:-4px;left:0}
.arrow::after,.arrow::before{background-color:#e8e8e8;content:'';position:absolute;width:28%;height:1.5px;right:-2px}
.arrow::after{top:-1.5px;transform:rotate(45deg)}
.arrow::before{top:1.5px;transform:rotate(-45deg)}*/

/* review page 
blockquote{margin:50px auto;font-style:italic;color:#555555;padding:1em 30px 1em 40px;border-left:8px solid #2f3f5e;line-height:1.6;position:relative;background:#EDEDED}
blockquote::before{font-family:Arial;content:"\201C";color:#78C0A8;color:#2f3f5e;font-size:4em;position:absolute;left:10px;top:-10px}
    blockquote::after{content:''}
    blockquote cite{display:block;color:#333333;font-style:normal;font-weight:bold;margin-top:1em}

    */


@media (min-width: 1200px) {    .container {         max-width: 1140px;  /* border: 1px solid rgb(255, 102, 0); background: orange;*/  }}
@media (min-width: 1400px) {    .container {         max-width: 1320px;  /* border: 1px solid red; background: red;*/ }}


@media screen and (max-width:992px){.column{flex:50%}}
@media screen and (max-width:600px){.row{flex-direction:column}}
@media screen and (max-width:992px){.columnf{flex:25%}}
@media screen and (max-width:600px){.rowf{flex-direction:column}}


 /* @media (min-width:768px){.container {max-width: 720px;}} */
/* @media (min-width: 992px){.container {max-width: 960px;}} */

